--- a/paper/egpaper_final.tex
+++ b/paper/egpaper_final.tex
@@ -334,20 +334,11 @@ Self-Bleu and n-Grams
 \hline
 \multicolumn{1}{c}{} & \multicolumn{2}{c}{Bleu} & \multicolumn{1}{c}{\multirow{}{}{}} \\ \cline{2-3}
 \multicolumn{1}{c}{\multirow{}{}{Model}}   & WT103       & TBC        & \multicolumn{1}{c}{\multirow{}{}{Perplexity}}                                \\ \hline
-{[}BertHas{]}                              & 7.06        & 7.8        & 270.62                                                \\
-Parallel1 1                                & 6.62        & 7.21       & 287.6                                                \\
-Parallel1 2                                & 5.58        & 7.24       & 327.6                                                \\
-Parallel1 3                                & 5.24        & 6.32       & 931.62                                               \\
-Attention 1                                & 5.52        & 7.1        & 338.12                                                  \\
-Attention 2                                & 8.15        & 6.59       & 386.66                                              \\
-Attention 3                                & 5.85        & 7.37       & 307.33                                                 \\
-Parallel0.15 1                             & 5.15            & 6.17           & 655.83                                                \\
+Original \cite{wang2019bert}                             & 7.06        & 7.8        & 270.62                                                \\
+Parallel1                                 & 6.62        & 7.21       & 287.6                                                \\
+Attention                                 & 8.15        & 6.59       & 386.66                                              \\
 Parallel0.15 2                             & 8.79            & 7.11           & 1241.75                                                 \\
-Parallel0.15 3                             & 5.84            & 7.19           & 264.39                                                \\
-Parallel0.15 4                             & 6.22            & 6.8           &  1063.07                                              \\
-Sequential 1                               & 6.16            & 7.22           & 165.99                                                \\
-Sequential 2                               & 5.73            & 7.27           & 374.23                                                 \\
-Sequential 3                               & 5.5            &  6.08          &  810.71                                               \\ \hline
+Sequential 2                               & 5.73            & 7.27           & 374.23                                                 \\ \hline
 \end{tabular}
 \end{table}
 
