--- a/paper/egpaper_final.tex
+++ b/paper/egpaper_final.tex
@@ -249,28 +249,18 @@ BERT is a powerful model pre-trained on a broad set of text composed by the whol
 Wikipedia and Brown corpora [].
 One of its main feature is its adaptability to a plethora of different tasks,
 by means of a fine-tuning on specific domain set.
-
 Typical fine-tuning techniques depends on the final task that the user requires BERT to perform.
 For example, considering classification tasks such as sentiment prediction and text classification,
 the fine-tuning will be focused on the [CLS] token, a special token used in the pre-training phase for the task
 of “next sentence prediction” and specifically designed for classification applications.
 
-Text generation is not a usual task for BERT, due to the fact that it is not a proper language model.
-In the case of text generation, the fine-tuning aims to make the model understand the structure of the text,
+Text generation is not a usual task for BERT.
+In this case, the fine-tuning aims to make the model understand the structure of the text,
 in order to mimic it at inference time.
-
-We have implemented a fine-tuning procedure that rely on a task of mask prediction, as in the original training of BERT [].
-In addition, in the case of a domain set with associated sentiments (or in general labels) we have designed
-a system able to learn the structure of the text associated with each label and that leaves to the final user
-the possibility to decide the sentiment of the text to generate.
-
-The basic fine-tuning is performed replacing with the [MASK] token a percentage (15\% by default as in the original
-training) of the tokens for each sentence.
-Then the sentences are passed through the model.
-The output of the model is a tensor of logits of dimension $num_sentences \times num\_tokens \times num\_words\_vocabulary$.
-For each sentence, only the logits corresponing to the masked token are extracted and used to compute the cross-entropy
+We have implemented a fine-tuning procedure that rely on \textit{Cloze} task present also in the original training [].
+This consists on replacing a percentage (15\% by default) of the tokens for each sentence with a [MASK] token and let
+BERT predict the blanks. The logits outputted by the model are then used to to compute the cross-entropy
 loss with respect to the original token that were replaced.
-
 
 \subsubsection{Generation of text with a specific structure}
 
