--- a/paper/egbib.bib
+++ b/paper/egbib.bib
@@ -1,56 +1,136 @@
-@misc{Authors14,
- author = {Authors},
- title = {The frobnicatable foo filter},
- note = {Face and Gesture  submission ID 324. Supplied as additional material {\tt fg324.pdf}},
- year = 2014
-}
-
-@misc{Authors14b,
- author = {Authors},
- title = {Frobnication tutorial},
- note = {Supplied as additional material {\tt tr.pdf}},
- year = 2014
-}
-
-@article{Alpher02,
-author = {FirstName Alpher},
-title = {Frobnication},
-journal = {Journal of Foo},
-volume = 12, 
-number = 1, 
-pages = {234--778}, 
-year = 2002
-}
-
-@article{article1,
-  author    = {Doe, John},
-  title     = {Title of article},
-  journal   = {journal of article},
+@article{attention,
+  author    = {Ashish Vaswani and
+               Noam Shazeer and
+               Niki Parmar and
+               Jakob Uszkoreit and
+               Llion Jones and
+               Aidan N. Gomez and
+               Lukasz Kaiser and
+               Illia Polosukhin},
+  title     = {Attention Is All You Need},
+  journal   = {CoRR},
+  volume    = {abs/1706.03762},
   year      = {2017},
-  volume    = {11},
-  number    = {1},
-  pages     = {11--13},
-  publisher = {Journal Publisher},
+  url       = {http://arxiv.org/abs/1706.03762}
 }
 
-@article{Alpher03,
-author = {FirstName Alpher and  FirstName Fotheringham-Smythe},
-title = {Frobnication revisited},
-journal = {Journal of Foo},
-volume = 13, 
-number = 1, 
-pages = {234--778}, 
-year = 2003
+@article{bert,
+  author    = {Jacob Devlin and
+               Ming{-}Wei Chang and
+               Kenton Lee and
+               Kristina Toutanova},
+  title     = {{BERT:} Pre-training of Deep Bidirectional Transformers for Language
+               Understanding},
+  journal   = {CoRR},
+  volume    = {abs/1810.04805},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1810.04805}
 }
 
-@article{Alpher04,
-author = {FirstName Alpher and FirstName Fotheringham-Smythe and FirstName Gamow},
-title = {Can a machine frobnicate?},
-journal = {Journal of Foo},
-volume = 14, 
-number = 1, 
-pages = {234--778}, 
-year = 2004
+@misc{gpt,
+  author    = {Alec Radford and
+               Karthik Narasimhan and
+               Tim Salimans and
+               Ilya Sutskever},
+  title     = {Improving Language Understanding by Generative Pre-Training},
+  year      = {2018},
+  url       = {https://s3-us-west-2.amazonaws.com/openai-assets/research-covers/language-unsupervised/language_understanding_paper.pdf}
+}
+
+@article{modernMethods,
+  author    = {Dimas Mu{\~{n}}oz{-}Montesinos},
+  title     = {Modern Methods for Text Generation},
+  journal   = {CoRR},
+  volume    = {abs/2009.04968},
+  year      = {2020},
+  url       = {https://arxiv.org/abs/2009.04968}
+}
+
+@INPROCEEDINGS{Bengali,
+  author={Abujar, Sheikh and Masum, Abu Kaisar Mohammad and Chowdhury, S. M. Mazharul Hoque and Hasan, Mahmudul and Hossain, Syed Akhter},
+  booktitle={2019 10th International Conference on Computing, Communication and Networking Technologies (ICCCNT)},
+  title={Bengali Text generation Using Bi-directional RNN},
+  year={2019},
+  pages={1-5},
+  doi={10.1109/ICCCNT45670.2019.8944784}}
+
+@INPROCEEDINGS{lstm1,
+    author={Zhang, Hanshuang and Zhang, Zhi},
+    booktitle={2020 15th IEEE Conference on Industrial Electronics and Applications (ICIEA)},
+    title={Automatic Generation Method of Ancient Poetry Based on LSTM},
+    year={2020},
+    pages={95-99},
+    doi={10.1109/ICIEA48937.2020.9248260}
+}
+
+@INPROCEEDINGS{lstm2,
+  author={Bartoli, Alberto and De Lorenzo, Andrea and Medvet, Eric and Morello, Dennis and Tarlao, Fabiano},
+  booktitle={2016 IEEE/WIC/ACM International Conference on Web Intelligence (WI)},
+  title={"Best Dinner Ever!!!": Automatic Generation of Restaurant Reviews with LSTM-RNN},
+  year={2016},
+  pages={721-724},
+  doi={10.1109/WI.2016.0130}
+}
+
+@INPROCEEDINGS{lstm3,
+  author={Huang, Chuen-Min and Lu, Kuo-Lin and Cheng, Yi-Ying and Peng, Yu-Chen},
+  booktitle={2020 IEEE International Conference on Big Data (Big Data)},
+  title={Generating Chinese Classical Poetry with Quatrain Generation Model (QGM) Using Encoder-Decoder LSTM},
+  year={2020},
+  pages={5700-5702},
+  doi={10.1109/BigData50022.2020.9378383}
+}
+
+@INPROCEEDINGS{embedds,
+  author={Talafha, Sameerah and Rekabdar, Banafsheh},
+  booktitle={2021 IEEE 15th International Conference on Semantic Computing (ICSC)},
+  title={Poetry Generation Model via Deep learning incorporating Extended Phonetic and Semantic Embeddings},
+  year={2021},
+  pages={48-55},
+  doi={10.1109/ICSC50631.2021.00013}
+}
+
+@article{texygen,
+  author    = {Yaoming Zhu and
+               Sidi Lu and
+               Lei Zheng and
+               Jiaxian Guo and
+               Weinan Zhang and
+               Jun Wang and
+               Yong Yu},
+  title     = {Texygen: {A} Benchmarking Platform for Text Generation Models},
+  journal   = {CoRR},
+  volume    = {abs/1802.01886},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1802.01886},
+  eprinttype = {arXiv},
+  eprint    = {1802.01886}
+}
+
+@article{evaltextgen1,
+  author    = {Asli Celikyilmaz and
+               Elizabeth Clark and
+               Jianfeng Gao},
+  title     = {Evaluation of Text Generation: {A} Survey},
+  journal   = {CoRR},
+  volume    = {abs/2006.14799},
+  year      = {2020},
+  url       = {https://arxiv.org/abs/2006.14799},
+  eprinttype = {arXiv}
+}
+
+@article{evaltextgen2,
+title = "Human evaluation of automatically generated text: Current trends and best practice guidelines",
+author = "Lee, {Chris van der} and Albert Gatt and Miltenburg, {Emiel van} and Emiel Krahmer",
+year = "2021",
+month = may,
+day = "21",
+doi = "10.1016/j.csl.2020.101151",
+volume = "67",
+pages = "1--24",
+journal = "Computer Speech & Language: An official publication of the International Speech Communication Associatiojn (ISCA)",
+issn = "0885-2308",
+publisher = "Academic Press Inc.",
 }
 
 @article{wang2019bert,
